Update README.md
add options to extract structural and logical couplings.